relink image files and create entry 5

--- a/entry4/index.html
+++ b/entry4/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Some Boba</title>
-        <link rel="icon" href="/images/Boba-IconBr.png"> <!--icon pic of title-->
+        <link rel="icon" href="images/Boba-IconBr.png"> <!--icon pic of title-->
         <link rel= "stylesheet" href="../style/reset.css">
         <link rel="stylesheet" href="style.css">
         <link rel="images" href="images">
@@ -10,7 +10,7 @@
 
     <body>
         <br>
-        <img src="/images/Boba-IconY.png"
+        <img src="images/Boba-IconY.png"
         alt="boba icon" style="float:left; max-height: 75px;">
         <!--float allows text to go before or after the image-->
 
@@ -36,7 +36,7 @@
         
 
         <div class="boba-wiki" >
-            <img src="/images/boba-wiki.png" alt="picture of a bubble tea from wikipedia">
+            <img src="images/boba-wiki.png" alt="picture of a bubble tea from wikipedia">
         </div>
 
         <div class="elements-intro">
@@ -54,9 +54,10 @@
             <li>taste</li>
             <li>price</li>
             <br>
+            <br>
         </ul>    
 
-        <h3>height and diameter   </h3>
+        <h3>volume   </h3>
 
         <div class="text">
             <p>
@@ -73,13 +74,13 @@
         <br>
         <div class="row">
             <div class="column">
-              <img src="/images/teazzi-fullsize.jpeg" alt="A large Teazzi Boba" style="width:100%">
+              <img src="images/teazzi-fullsize.jpeg" alt="A large Teazzi Boba" style="width:100%">
             </div>
             <div class="column">
-              <img src="/images/kungfu-tea.png" alt="A medium Kung Fu Tea Boba" style="width:100%">
+              <img src="images/kungfu-tea.png" alt="A medium Kung Fu Tea Boba" style="width:100%">
             </div>
             <div class="column">
-              <img src="/images/moge.jpeg" alt="A plus-sized Moge Tea Boba" style="width:100%">
+              <img src="images/moge.jpeg" alt="A plus-sized Moge Tea Boba" style="width:100%">
             </div>
         </div>
 
@@ -95,7 +96,7 @@
                 <br>
                 <br>
                 <br>
-                In the next entry, we will talk about the volume design for different bubble tea stores!
+                In the next entry, we will talk about the <bold>volume design</bold> for different bubble tea stores!
             </p>
         </div>
         <br>
