--- a/entry5/index.html
+++ b/entry5/index.html
@@ -32,7 +32,7 @@
 
         <h2><bold>Design</bold> of a Bubble Tea
             <br>一杯珍奶的<bold>設計</bold>
-            <br>cont.
+            <br><small>cont.</small>
         </h2>
         
 
@@ -64,18 +64,19 @@
                 From what I remember in elementary, I used to just order medium-sized bubble teas whenever I visited my local tea store. 
                 I would only order a large if the bubble tea that day was a reward for me or when someone else was treating me. 
                 However, what I noticed nowadays is that many sizings in the store have increased. 
-                The sizes are not small, medium, and large, but medium, large, and extra large. 
+                The sizes are not <bold> small, medium, and large</bold>, but <bold>medium, large, and extra large</bold>. 
                 Aside from the increase in sizing, I figured out recently why stores like to use the names medium and large, instead of small and large. 
             </p>
         </div>
-
+        <br>
+        <br>
         <div class="text">
             <p>
                 A medium-sized bubble tea typically ranges from 16 to 24 ounces (473 to 710 milliliters). 
                 A large-sized bubble tea typically ranges from 24 to 32 ounces (710 to 946 milliliters). 
                 Some places may offer even larger sizes, going up to 32 to 40 ounces or more. 
                 This can be exemplified by the plus-sized option from Moge tea (shown in the <a href="/entry4/">last entry</a>). 
-                A few other stores in the US also offer an enlarged portion similar to Moge tea, such as Anda Boba Tea and Half and Half Tea Express’s Super Cup. 
+                A few other stores in the US also offer an enlarged portion similar to Moge tea, such as Anda Boba Tea(picture 1 &2) and Half and Half Tea Express’s Super Cup (picture 3). 
                 The enlargement in size is surely most evident in the US since it is also confirmed to have the largest food portion in comparison with all other countries. 
             </p>
         </div>
@@ -86,15 +87,12 @@
                 style="width: 100%;">
             </div>
             <div class="column">
-              <img src="images/anda-boba-scale.png" alt="holding the large Anda Boba" style="width:100%">
+              <img src="images/anda-boba-scale.png" alt="holding the large Anda Boba" style="height: 48%; float: right">
             </div>
             <div class="column">
-                <img src="images/half-and-half.jpeg" alt="a super sized Half anf Half Boba" style="width:100%">
-              </div>
+                <img src="images/half-and-half.jpeg" alt="a super sized Half anf Half Boba" style="flex:50%; width: 100%;">
+            </div>
         </div>
-
-        <br>
-        <br>
 
         <div class="text">
             <p>There are many factors that contribute to the large food portions in the US, including cultural norms, marketing tactics, and economic incentives. 
@@ -105,8 +103,8 @@
                 has shown that people tend to eat more when presented with larger portions, so companies may be capitalizing on this phenomenon to increase sales.
             </p>
         </div>
-
-        <img src="images/soda-verus.jpeg" alt="portion of soda in america vs Japan">
+        <br>
+        <img src="images/soda-verus.jpeg" alt="portion of soda in america vs Japan" style="margin: 30px; width: fit-content;">
         <br>
         <br>
 
@@ -118,6 +116,10 @@
                 Though more factors  to consider of includes the difference in consumption of ingredients and total calories.
             </p>
         </div>
+        <br>
+        <img src="images/western-diet.jpeg" alt="the western diet" style="margin: 30px; width: fit-content;">
+        <br>
+        <br>
 
         <div class="text">
             <p>
@@ -125,28 +127,17 @@
                 A clip from the news in 2015  stated that the Centers for Disease Control and Prevention found that while adult obesity rates remain steady
                 , they are still high around the country. 1/3 of the Americans are obese. With the difference of portion size between America and other countries
                 , it is important to control your own portion size to prevent over consumption.  
+                For boba, you may decrease the calories by lowering sugar level.
             </p>
         </div>
 
-
         <br>
-        <div class="row">
-            <div class="column">
-              <img src="images/teazzi-fullsize.jpeg" alt="A large Teazzi Boba" style="width:100%">
-            </div>
-            <div class="column">
-              <img src="images/kungfu-tea.png" alt="A medium Kung Fu Tea Boba" style="width:100%">
-            </div>
-            <div class="column">
-              <img src="images/moge.jpeg" alt="A plus-sized Moge Tea Boba" style="width:100%">
-            </div>
-        </div>
-
-
+        <img src="images/comebuy-sugarlevel.jpeg" alt="sugar level diagram" style="margin: 30px; display: flex; width: 40%;">
         <br>
         <br>
 
         <div class="text">
+            <p>
                 With that, we will talk about the <bold>cup material</bold> for different bubble tea stores in the nect entry.
             </p>
         </div>
