--- a/entry2/index.html
+++ b/entry2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Some Boba</title>
-        <link rel="icon" href="/images/Boba-IconBr.png"> <!--icon pic of title-->
+        <link rel="icon" href="images/Boba-IconBr.png"> <!--icon pic of title-->
         <link rel= "stylesheet" href="../style/reset.css">
         <link rel="stylesheet" href="style.css">
         <link rel="images" href="images">
@@ -10,7 +10,7 @@
 
     <body>
         <br>
-        <img src="/images/Boba-IconY.png"
+        <img src="images/Boba-IconY.png"
         alt="boba icon" style="float:left;width:45px;height:50x;">
         <!--float allows text to go before or after the image-->
 
@@ -25,7 +25,7 @@
         <h2><bold>Teazzi's</bold> deep roast oolong tea latte + boba</h2>
 
         <div class="teazzi-pic" >
-            <img src="/images/Subject.png" alt="teazzi boba">
+            <img src="images/Subject.png" alt="teazzi boba">
         </div>
 
         <ul>
@@ -74,6 +74,7 @@
         <br>
         <a href="/entry1/">  previous entry </a>
         <br>
+        <a href="/entry3/">  next entry</a>
         <p> </p>
         <br>
 
