--- a/home/index.html
+++ b/home/index.html
@@ -35,11 +35,11 @@
                     <div class="boba"><div class="div"></div></div>
                     <div class="overlap-2">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper"><a href="/entry5/">5</a></div>
+                    <div class="text-wrapper"><a href="https://amandalien.github.io/harmonic-collection1/entry5/">5</a></div>
                     </div>
                     <div class="overlap-3">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-2"><a href="/entry1/">1</a></div>
+                    <div class="text-wrapper-2"><a href="https://amandalien.github.io/harmonic-collection1/entry1/">1</a></div>
                     </div>
                     <div class="div-wrapper"><div class="div"></div></div>
                     <div class="overlap-4">
@@ -50,15 +50,15 @@
                     <div class="boba-2"><div class="div"></div></div>
                     <div class="top-bar"></div>
                     <div class="title-eng">Some Boba</div>
-                    <div class="text-wrapper-4">9</div>
+                    <div class="text-wrapper-4"><a href="https://amandalien.github.io/harmonic-collection1/entry9/">9</a></div>
                     </div>
                     <div class="overlap-6">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-5"><a href="/entry7/">7</a></div>
+                    <div class="text-wrapper-5"><a href="https://amandalien.github.io/harmonic-collection1/entry7/">7</a></div>
                     </div>
                     <div class="overlap-7">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-6"><a href="/entry2/">2</a></div>
+                    <div class="text-wrapper-6"><a href="https://amandalien.github.io/harmonic-collection1/entry2/">2</a></div>
                     </div>
                     <div class="overlap-group-2">
                     <div class="boba-3"><div class="div"></div></div>
@@ -73,16 +73,16 @@
                 </div>
                 <div class="overlap-8">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-7"><a href="/entry4/">4</a></div>
+                    <div class="text-wrapper-7"><a href="https://amandalien.github.io/harmonic-collection1/entry4/">4</a></div>
                 </div>
                 <div class="boba-9"><div class="div"></div></div>
                 <div class="overlap-9">
                     <div class="boba-10"><div class="div"></div></div>
-                    <div class="text-wrapper-8"><a href="/entry3/">3</a></div>
+                    <div class="text-wrapper-8"><a href="https://amandalien.github.io/harmonic-collection1/entry3/">3</a></div>
                 </div>
                 <div class="overlap-10">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-9"><a href="/entry6/">6</a></div>
+                    <div class="text-wrapper-9"><a href="https://amandalien.github.io/harmonic-collection1/entry6/">6</a></div>
                 </div>
                 <div class="boba-11"><div class="div"></div></div>
                 <div class="overlap-11">
