replace entry navigation links with published web links

--- a/entry3/index.html
+++ b/entry3/index.html
@@ -119,8 +119,8 @@
 
         <hr>
         <!--alignment!!!!!-->
-        <a href="/entry2/" style="align-content: left;">    previous entry </a>
-        <a href="/entry4/" style="align-content: right;">    next entry</a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry2/">    previous entry </a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry4/">    next entry</a>
     </footer>
     
 
