--- a/entry1/index.html
+++ b/entry1/index.html
@@ -77,4 +77,10 @@
 
 
     </body>
+
+    <footer>
+        <br>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry2/">  next entry</a>
+        <br>
+    </footer>
 </html>
