--- a/entry2/index.html
+++ b/entry2/index.html
@@ -72,9 +72,9 @@
         </div>
 
         <br>
-        <a href="/entry1/">  previous entry </a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry1/">  previous entry </a>
         <br>
-        <a href="/entry3/">  next entry</a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry3/">  next entry</a>
         <p> </p>
         <br>
 
