--- a/entry4/index.html
+++ b/entry4/index.html
@@ -112,11 +112,11 @@
         </div>
 
         <br>
-        <a href="/entry3/" style="align-content: left;">    previous entry </a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry4/">    previous entry </a>
         <br>
-        <a href="/entry5/" style="align-items: right;">    next entry</a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry5/">    next entry</a>
         <br>
-        <p> </p>
+        <br>
         <br>
 
     </footer>
