--- a/entry6/index.html
+++ b/entry6/index.html
@@ -87,7 +87,7 @@
             <div class="inside-middle-section">
                 <div class="rating-text">
                     <p>
-                        Comparing their prices with my Teazzi order from <a href="/entry2/">entry 2</a>, fiftylan is a bit more pricey.
+                        Comparing their prices with my Teazzi order from <a href="https://amandalien.github.io/harmonic-collection1/entry2/">entry 2</a>, fiftylan is a bit more pricey.
                         However, many other drinks from Teazzi would round up to be about the same price as this fiftylan order.
                         And fiftylan has a very cute <bold>stamp card</bold> that gives you a free drink when you collect a total of 10 drinks/stamp. 
                         So technically, you can argue that the extra money goes towards the free drink.
@@ -123,10 +123,10 @@
         </div>
 
         <br>
-        <a href="/entry5/">  previous entry </a>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry5/">  previous entry </a>
         <br>
-        <a href="/entry7/">  next entry</a>
-        <p> </p>
+        <a href="https://amandalien.github.io/harmonic-collection1/entry7/">  next entry</a>
+        <br>
         <br>
 
     </footer>
