readjusted wording for home

--- a/home/index.html
+++ b/home/index.html
@@ -89,7 +89,7 @@
                     <div class="boba-12"><div class="div"></div></div>
                     <div class="text-wrapper-10">10</div>
                 </div>
-                <div class="text-wrapper-11">click the bobas</div>
+                <div class="text-wrapper-11">tap the bobas</div>
                 </div>
             </div>
           </div>
