building entry 7 and organized files

--- a/entry4/index.html
+++ b/entry4/index.html
@@ -57,7 +57,7 @@
             <br>
         </ul>    
 
-        <h3>volume   </h3>
+        <h3>height & diameter   </h3>
 
         <div class="text">
             <p>
