--- a/entry5/index.html
+++ b/entry5/index.html
@@ -18,7 +18,7 @@
         <hr>
 
         <div class="date">
-            <p><bold>  Oct. 10rd, 2023</bold></p>
+            <p><bold>  Oct. 10th, 2023</bold></p>
         </div>
         
         <hr class="dotted">
@@ -138,7 +138,7 @@
 
         <div class="text">
             <p>
-                With that, we will talk about the <bold>cup material</bold> for different bubble tea stores in the nect entry.
+                With that, we will talk about the <bold>cup material</bold> for different bubble tea stores in the next entry.
             </p>
         </div>
         <br>
