--- a/home/index.html
+++ b/home/index.html
@@ -9,24 +9,6 @@
     </head>
 
     <body>
-        <!--
-
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba2"></div></div>
-        <div class="circles"><div class="boba3"></div></div>
-        <div class="circles"><div class="boba4"></div></div>
-        <div class="circles"><div class="boba5"></div></div>
-        <div class="circles"><div class="boba6"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        <div class="circles"><div class="boba1"></div></div>
-        !-->
 
         <div class="frame">
             <div class="overlap-wrapper">
@@ -44,7 +26,7 @@
                     <div class="div-wrapper"><div class="div"></div></div>
                     <div class="overlap-4">
                     <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-3"></div>
+                    <div class="text-wrapper-3"><a href="https://amandalien.github.io/harmonic-collection1/entry8/">8</a></div>
                     </div>
                     <div class="overlap-5">
                     <div class="boba-2"><div class="div"></div></div>
