homepage re-edit and idk

--- a/index.html
+++ b/index.html
@@ -9,72 +9,176 @@
     </head>
 
     <body>
-
-        <div class="frame">
-            <div class="overlap-wrapper">
-                <div class="overlap">
+        <head>
+            <title>
+              Some Boba
+            </title>
+            <link rel="icon" href="images/Boba-IconBr.png">
+            <link rel="stylesheet" href="../style/reset.css">
+            <link rel="stylesheet" href="style.css">
+            <link rel="images" href="images">
+          </head>
+          
+          <body>
+            <div class="frame">
+              <div class="overlap-group-wrapper">
                 <div class="overlap-group">
-                    <div class="boba"><div class="div"></div></div>
-                    <div class="overlap-2">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper"><a href="https://amandalien.github.io/harmonic-collection1/entry5/">5</a></div>
-                    </div>
-                    <div class="overlap-3">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-2"><a href="https://amandalien.github.io/harmonic-collection1/entry1/">1</a></div>
-                    </div>
-                    <div class="div-wrapper"><div class="div"></div></div>
-                    <div class="overlap-4">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-3"><a href="https://amandalien.github.io/harmonic-collection1/entry8/">8</a></div>
-                    </div>
-                    <div class="overlap-5">
-                    <div class="boba-2"><div class="div"></div></div>
-                    <div class="top-bar"></div>
-                    <div class="title-eng">Some Boba</div>
-                    <div class="text-wrapper-4"><a href="https://amandalien.github.io/harmonic-collection1/entry9/">9</a></div>
-                    </div>
-                    <div class="overlap-6">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-5"><a href="https://amandalien.github.io/harmonic-collection1/entry7/">7</a></div>
-                    </div>
-                    <div class="overlap-7">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-6"><a href="https://amandalien.github.io/harmonic-collection1/entry2/">2</a></div>
-                    </div>
+                  <div class="overlap">
+                    <div class="div">
+                      <div class="component">
                     <div class="overlap-group-2">
-                    <div class="boba-3"><div class="div"></div></div>
-                    <div class="boba-4"><div class="div"></div></div>
-                    <div class="boba-5"><div class="div"></div></div>
-                    <img class="straw" src="images/straw.png" />
+                      <div class="boba">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-wrapper">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="div-wrapper">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-3">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-4">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-5">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-6">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-7">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-8">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-9">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-10">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-11">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-12">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-13">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-14">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-15">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-16">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-17">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-18">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="boba-19">
+                        <div class="boba-2">
+                        </div>
+                      </div>
+                      <div class="text-wrapper">
+                        tap the bobas
+                      </div>
                     </div>
-                    <div class="boba-6"><div class="div"></div></div>
-                    <div class="boba-7"><div class="div"></div></div>
-                    <div class="boba-8"><div class="div"></div></div>
-                    <div class="title-ch">有珍珠</div>
+                  </div>
+                  <img class="straw" src="images/straw.png">
+                  <div class="text-wrapper-2">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry1/">
+                      1
+                    </a>
+                  </div>
+                  <div class="text-wrapper-3">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry2/">
+                      2
+                    </a>
+                  </div>
+                  <div class="text-wrapper-4">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry3/">
+                      3
+                    </a>
+                  </div>
+                  <div class="text-wrapper-5">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry5/">
+                      5
+                    </a>
+                  </div>
+                  <div class="text-wrapper-6">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry4/">
+                      4
+                    </a>
+                  </div>
+                  <div class="text-wrapper-7">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry6/">
+                      6
+                    </a>
+                  </div>
+                  <div class="text-wrapper-8">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry7/">
+                      7
+                    </a>
+                  </div>
+                  <div class="text-wrapper-9">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry8/">
+                      8
+                    </a>
+                  </div>
+                  <div class="text-wrapper-10">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry9/">
+                      9
+                    </a>
+                  </div>
+                  <div class="text-wrapper-11">
+                    <a href="https://amandalien.github.io/harmonic-collection1/entry10/">
+                      10
+                    </a>
+                  </div>
                 </div>
-                <div class="overlap-8">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-7"><a href="https://amandalien.github.io/harmonic-collection1/entry4/">4</a></div>
+                <div class="title-eng">
+                  Some Boba
                 </div>
-                <div class="boba-9"><div class="div"></div></div>
-                <div class="overlap-9">
-                    <div class="boba-10"><div class="div"></div></div>
-                    <div class="text-wrapper-8"><a href="https://amandalien.github.io/harmonic-collection1/entry3/">3</a></div>
+                <div class="title-ch">
+                  有珍珠
                 </div>
-                <div class="overlap-10">
-                    <div class="boba-wrapper"><div class="div"></div></div>
-                    <div class="text-wrapper-9"><a href="https://amandalien.github.io/harmonic-collection1/entry6/">6</a></div>
+              </div>
+              <div class="overlap-2">
+                <div class="text-wrapper-12">
+                    <a href="https://amandalien.github.io/harmonic-collection1/about/">
+                        about
+                      </a>
                 </div>
-                <div class="boba-11"><div class="div"></div></div>
-                <div class="overlap-11">
-                    <div class="boba-12"><div class="div"></div></div>
-                    <div class="text-wrapper-10">10</div>
-                </div>
-                <div class="text-wrapper-11">tap the bobas</div>
-                </div>
+              </div>
             </div>
-          </div>
-    </body>
+          </body>
 
 </html>
