about page/ entry 10 for assignment

--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,13 @@
                      <div class="row">
                         <div class="brand">
                             <a href="https://amandalien.github.io/harmonic-collection/">
-                            <img src="images/Boba-IconY.png" alt="boba icon" style="max-height: 75px; width: 85px;">
+                            <img src="images/Boba-IconY.png" alt="boba icon" style="height: 75px; width: 85px;">
                             </a>
                         </div>
                         <h1>about</h1>
+
+                        <hr class="dotted">
+
                      </div>
                   </div>
                </div>
@@ -36,7 +39,7 @@
         
         <div class="contact">
             <p>
-                contact- amandal107y@gmail.com 
+                contact - amandal107y@gmail.com 
             </p>
         </div>
     </body>
