--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Some Boba - about</title>
+        <title>Some Boba - About</title>
         <link rel="icon" href="images/Boba-IconBr.png"> <!--icon pic of title-->
         <link rel= "stylesheet" href="../style/reset.css">
         <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
                             <img src="images/Boba-IconY.png" alt="boba icon" style="height: 75px; width: 85px;">
                             </a>
                         </div>
-                        <h1>about</h1>
+                        <h1>About</h1>
 
                         <hr class="dotted">
 
