--- a/entry10/index.html
+++ b/entry10/index.html
@@ -7,7 +7,7 @@
 
 	<!-- Site title
    ================================================== -->
-	<title>Some Boba - bobarista insiders</title>
+	<title>Some Boba - Insiders</title>
    <link rel="icon" href="images/Boba-IconBr.png">
 
 	<!-- Bootstrap CSS
@@ -60,16 +60,6 @@
                
                <hr class="dotted">
                <br>
-               
-               <div class="navicon">
-                  <div class="menu-container">
-
-                     <div class="circle dark inline">
-                     <i class="icon ion-navicon"></i>
-                     </div>
-                  </div>
-               </div>
-
                </div>
             </div>
          </div>
@@ -86,14 +76,13 @@
    <!-- Header section
    ================================================== -->
    <section id="header">
-         <div class="header-thumb">
-            <h2 class="wow fadeIn" data-wow-delay="0.6s">
-                  <bold>Special</bold> interview
-            </h2>
-            <h2 class="wow fadeInUp" data-wow-delay="0.9s">
-               <bold>特別</bold>訪談
-            </h2>
-         </div>
+      <div class="header-thumb">
+         <h2 class="wow fadeIn" data-wow-delay="0.6s">
+               Special<bold> interview</bold>
+         </h2>
+         <h2 class="wow fadeInUp" data-wow-delay="0.9s">
+            特別<bold>訪談</bold>
+         </h2>
       </div>
    </section>
 
@@ -256,7 +245,7 @@
             <br>
 				<p class="wow fadeInUp"  data-wow-delay="0.3s">Copyright © 2023 Amanda Lien</p>
 				<ul class="social-icon wow fadeInUp"  data-wow-delay="0.6s">
-					<li><a href="https://amandalien.github.io/harmonic-collection1/entry10/">previous entry</a></li>
+					<li><a href="https://amandalien.github.io/harmonic-collection/entry10/">previous entry</a></li>
 					<li>next entry(soon!)</li>
 				</ul>
 			</div>
