relinked homepage and entry3

--- a/entry8/index.html
+++ b/entry8/index.html
@@ -25,7 +25,7 @@
                      <div class="row">
       
                      <div class="brand">
-                        <a href="https://amandalien.github.io/harmonic-collection1/home/">
+                        <a href="https://amandalien.github.io/harmonic-collection/">
                            <img src="images/Boba-IconY.png" alt="boba icon" style="max-height: 75px; width: 85px;">
                         </a>
                      </div>
