--- a/entry1/index.html
+++ b/entry1/index.html
@@ -28,7 +28,7 @@
                         </a>
                      </div>
       
-                     <h1>Bubble Tea: an Introduction </h1>
+                     <h1>Bubble Tea: an Introduction</h1>
       
                      <div class="date">
                            <p><bold>  Sept. 12th, 2023</bold></p>
@@ -41,6 +41,8 @@
                </div>
             </nav>
         </div>
+        <br>
+        <br>
 
         <section id="header">
             <div class="header-thumb">
@@ -96,8 +98,11 @@
                     Even these simple ingredigents could be exchanged or added for other flavors.
                 </p>
             </div>
+            <br>
+            <br>
+            <br>
 
-            <h2>How was bubble tea invented?</h2>
+            <h3>How was bubble tea invented?</h3>
 
             <div class="text">
                 <p>
@@ -119,7 +124,10 @@
                     This includes additional toppings, different kinds of drinks, and even changing the tempature for more enojoyment withe the change of seasons.
                     There is so much about bubble tea!!
                 </p>    
+                <br>
+                <br>
             </div>
+        </div>
         </div>
     </body>
 
