--- a/entry11-about/index.html
+++ b/entry11-about/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Some Boba - About</title>
-        <link rel="icon" href="images/Boba-IconBr.png"> <!--icon pic of title-->
+        <link rel="icon" href="images/Boba-IconBr.png">
         <link rel= "stylesheet" href="../style/reset.css">
         <link rel="stylesheet" href="style.css">
         <link rel="images" href="images">
