--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Some Boba - about</title>
+    <title>Some Boba</title>
     <link rel="icon" href="images/Boba-IconBr.png">
     <link rel= "stylesheet" href="style/reset.css">
     <meta charset="utf-8" />
