--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <title>Interaction Lab</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
-    <body>
         
+    <body>
+        <h1>Amanda Lien</h1>
+        <h2>Interaction Lab</h2>
+        <br>
+        <br>
+        <p>
+            projects:
+        </p>
     </body>
 
 </html>
